--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -114,7 +114,7 @@ blockquote {
 
 @media (min-width: 576px) {
   .profile {
-    width: 30%;
+    width: 25%; //30%;
     .address {
       p { display: block; }
     }
@@ -253,7 +253,7 @@ blockquote {
 .social {
   text-align: center;
   .contact-icons {
-    font-size: 4rem;
+    font-size: 2rem; //4rem;
     a {
       i::before {
         color: var(--global-text-color);
